Show statistics for Available Languages (#45)
* use latest tag for wdp download

* add statistics endpoint

* remove useless params

* improve docs

* fix docs

* fix linting issues

* fix route name to fit styling

* fix: resolve all review suggestions

* Minor formatting and spelling fixes + marks

---------
