# api/routes.go
@@ -20,6 +20,7 @@ func SetupRoutes(r *gin.Engine) {
 			v1.GET("/data-version/:lang", handlers.GetLanguageVersion)
 			v1.GET("/languages", handlers.GetAvailableLanguages)
 			v1.GET("/contracts", handlers.GetContracts)
+			v1.GET("/language-stats", handlers.GetLanguageStats)
 		}
 	}
 }
